Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@ Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019)
 
 Please cite:
 
-```
-Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. Public Performance & Management Review, 42(1), 115-141.
-```
+
+#### Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. *Public Performance & Management Review*, 42(1), 115-141.
+
