--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@ layout: default
 title: ""
 ---
 
+<style>
+.site-footer {
+    display: none;
+}
+</style>
+
 # Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results
 
 Lecy, J. D., Ashley, S. R., & Santamarina, F. J. (2019)
