--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ title: ""
 .site-footer {
     display: none;
 }
+.view {
+    display: none;
+}
 </style>
 
 # Do Nonprofit Missions Vary by the Political Ideology of Supporting Communities? Some Preliminary Results
