update matching steps

--- a/CODE/02-matching.html
+++ b/CODE/02-matching.html
@@ -1812,8 +1812,8 @@ summary {
 <li><a href="#examine-matches">Examine Matches</a></li>
 <li><a href="#save-the-balanced-dataset">Save the Balanced Dataset</a></li>
 <li><a href="#balanced-data">Balanced Data</a></li>
-<li><a href="#citation">Citation</a></li>
 </ul></li>
+<li><a href="#citation">Citation</a></li>
 </ul>
 </div>
 
@@ -2463,9 +2463,14 @@ Total run time : 0 hours 0 minutes and 21 seconds</code></pre>
 <hr>
 <p><br></p>
 </div>
-<div id="citation" class="section level2">
-<h2>Citation</h2>
+</div>
+<div id="citation" class="section level1">
+<h1>Citation</h1>
 <p>Lecy, J. D., Ashley, S. R., &amp; Santamarina, F. J. (2019). Do nonprofit missions vary by the political ideology of supporting communities? Some preliminary results. <em>Public Performance &amp; Management Review</em>, 42(1), 115-141. <a href="https://github.com/lecy/political-ideology-of-nonprofits/raw/master/assets/Lecy-Ashley-Santamarina-PPMR-2019.pdf">DOWNLOAD</a></p>
+<p><strong>Matching Packages:</strong></p>
+<p>Iacus, S. M., King, G., &amp; Porro, G. (2012). Causal inference without balance checking: Coarsened exact matching. Political analysis, 20(1), 1-24.</p>
+<p>Ho, D., Imai, K., King, G., &amp; Stuart, E. A. (2011). MatchIt: Nonparametric Preprocessing for Parametric Causal Inference. Journal of Statistical Software,42(i08).</p>
+<p>Sekhon, Jasjeet S. 2011. “Multivariate and Propensity Score Matching Software with Automated Balance Optimization: The Matching package for R.” Journal of Statistical Software. 42(7): 1-52.</p>
 <br>
 <hr>
 <p><br> <br></p>
@@ -2525,7 +2530,6 @@ img {
    margin-bottom:30px;
 }
 </style>
-</div>
 </div>
 
 
